syntax = "proto3";

package Core.Protos;

option csharp_namespace = "Core";

import "google/protobuf/empty.proto";
import "Protos/customer.proto";
import "Protos/custom_types.proto";

service LoanService {
  rpc GetAll (google.protobuf.Empty) returns (GetAllLoansResponse);
  rpc GetById (GetLoanByIdRequest) returns (LoanModel);
  rpc Add (AddLoanRequest) returns (LoanModel);
  rpc Update (UpdateLoanRequest) returns (google.protobuf.Empty);
  rpc Delete (DeleteLoanRequest) returns (google.protobuf.Empty);
}

message LoanModel {
  int32 loan_id = 1;
  optional int32 customer_id = 2;
  optional string principal = 3;
  optional string interest_rate = 4;
  optional DateOnly start_date = 5;
  optional DateOnly end_date = 6;
  optional string status = 7;
}

message GetAllLoansResponse {
  repeated LoanModel loans = 1;
}

message GetLoanByIdRequest {
  int32 loan_id = 1;
}

message AddLoanRequest {
  optional int32 customer_id = 1;
  optional string principal = 2;
  optional string interest_rate = 3;
  optional DateOnly start_date = 4;
  optional DateOnly end_date = 5;
  optional string status = 6;
}

message UpdateLoanRequest {
  int32 loan_id = 1;
  optional int32 customer_id = 2;
  optional string principal = 3;
  optional string interest_rate = 4;
  optional DateOnly start_date = 5;
  optional DateOnly end_date = 6;
  optional string status = 7;
}

message DeleteLoanRequest {
  int32 loan_id = 1;
}
